# boostlss

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENTS.override.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  benchmark_jsu.py  benchmark_speed.py  escalate_msg.txt  mkdocs.yml  review.md  run_dbg.py  scratch.rs  test_ndarray.rs  test_script.py  test_serde.rs  todo-python-bindings.md
crates/boostlss/: Cargo.toml
crates/boostlss-py/: Cargo.toml  pyproject.toml
crates/boostlss-py/src/: data.rs  family.rs  learner.rs  lib.rs  model.rs  stabsel.rs
crates/boostlss-py/tests/: test_basic.py  test_binomial.py  test_categorical.py  test_early_stopping.py  test_family.py  test_histtree.py  test_model.py  test_multinomial.py  test_new_families.py  test_noncyclic_outer.py  test_pickle.py  test_pspline.py  test_random_effects.py  test_serialization.py
crates/boostlss/src/: bin.rs  cv.rs  data.rs  error.rs  lib.rs  model.rs  param.rs  util.rs
crates/boostlss/src/cv/: mod.rs  stabsel.rs
crates/boostlss/src/engine/: cyclical.rs  mod.rs  noncyclical.rs  stabilization.rs
crates/boostlss/src/family/: beta.rs  binomial.rs  burr12.rs  gamma.rs  gaussian.rs  ged.rs  gev.rs  gpd.rs  inverse_gaussian.rs  jsu.rs  laplace.rs  log_logistic.rs  log_normal.rs  logistic.rs  merton.rs  mod.rs  multinomial.rs  nbinomial.rs  nig.rs  poisson.rs  shash.rs  student_t.rs  tweedie.rs  weibull.rs  zinb.rs  zip.rs
crates/boostlss/src/learner/: bspatial.rs  constrained_pspline.rs  hist_tree.rs  linear.rs  mod.rs  tree.rs  (+5 more)
crates/boostlss/tests/: faer_test.rs  golden_tests.rs
(+107 files in other folders)
