[package]
name = "boostlss-py"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "boostlss_py"
crate-type = ["cdylib"]

[dependencies]
boostlss = { path = "../boostlss" }
pyo3 = { version = "0.21.2", features = ["extension-module", "abi3-py38"] }
numpy = "0.21.0"
ndarray = "0.17.2"
bincode = "1.3.3"
serde_json = "1.0"
