[package]
name = "boostlss"
version = "0.0.0"
edition = "2021"
description = "Boosting GAMLSS (distributional regression) in Rust"
license = "MIT OR Apache-2.0"

[dependencies]
faer = "0.24.0"
ndarray = { version = "0.17.2", features = ["serde"] }
statrs = "0.18.0"
thiserror = "2.0.18"
rand = "0.8.5"
rayon = { version = "1.10.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
parallel = ["rayon"]

[dev-dependencies]
approx = "0.5.1"
proptest = "1.11.0"
